--- a/build.properties
+++ b/build.properties
@@ -6,5 +6,5 @@ ivy.artifact.group=pentaho
 package.id=pentaho-twelve-days-visualizations
 bin.dir=bin
 
-project.revision=TRUNK-SNAPSHOT
-Implementation-Version=TRUNK-SNAPSHOT
+project.revision=6.0-SNAPSHOT
+Implementation-Version=6.0-SNAPSHOT
